--- a/benchmark/pyproject.toml
+++ b/benchmark/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.7",
     "opcua>=0.98.13",
+    "python-dotenv>=1.2.1",
     "python-snap7>=2.0.2",
     "requests>=2.32.5",
     "urllib3>=2.5.0",
