--- a/benchmark/.env.example
+++ b/benchmark/.env.example
@@ -4,3 +4,27 @@ IP=192.168.106.62
 # WebAPI Authentication
 WEBAPI_USER=5AHIT
 WEBAPI_PASSWORD=5ahiT2025
+
+# OPC UA Configuration
+OPCUA_PORT=4840
+OPCUA_NAMESPACE=3
+# Variable paths for OPC UA (these match the WebAPI variable paths by default)
+OPCUA_SINGLE_VAR='"PerformaceData".ToServer.bool00'
+OPCUA_BULK_VAR='"PerformaceData".PlcData.BulkData'
+
+# S7 Protocol Configuration (Matched to Projekt5AHIT_SYT.pdf)
+S7_RACK=0
+S7_SLOT=1
+
+# DB7 "Performace DataS7" 
+S7_DB_NUMBER=7 
+
+# bool00 is at Offset 0.0 
+S7_BOOL_OFFSET=0 
+
+# BulkData starts at Offset 136.0 
+# (Previous variables occupy bytes 0-135)
+S7_BULK_OFFSET=136 
+
+# LTime is 64-bit (8 bytes)
+S7_BULK_ELEMENT_SIZE=8
