--- a/benchmark/pyproject.toml
+++ b/benchmark/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cryptography>=46.0.3",
     "matplotlib>=3.10.7",
     "opcua>=0.98.13",
     "python-dotenv>=1.2.1",
