added more data types

--- a/benchmark/.env.example
+++ b/benchmark/.env.example
@@ -22,6 +22,12 @@ S7_DB_NUMBER=7
 # bool00 is at Offset 0.0 
 S7_BOOL_OFFSET=0 
 
+# int16_01 is at Offset 2.0
+S7_INT16_OFFSET=2
+
+# int32_01 is at Offset 12.0
+S7_INT32_OFFSET=12
+
 # BulkData starts at Offset 136.0 
 # (Previous variables occupy bytes 0-135)
 S7_BULK_OFFSET=136 
