benchmark config ins env

--- a/benchmark/.env.example
+++ b/benchmark/.env.example
@@ -35,3 +35,14 @@ S7_BULK_OFFSET=136
 
 # LTime is 64-bit (8 bytes)
 S7_BULK_ELEMENT_SIZE=8
+
+# Benchmark Configuration
+
+# Test duration for single write benchmarks (seconds)
+BENCHMARK_DURATION_SECONDS=5
+
+# Target rates for single write tests (comma-separated, ops/s)
+BENCHMARK_TARGET_RATES=1,10,20
+
+# Number of repetitions for bulk write test
+BENCHMARK_BULK_REPETITIONS=10
